tests/ui/thread-local/non-static.stderr
error: the `thread_local` attribute cannot be used on constants
  --> $DIR/non-static.rs:4:3
   |
LL | #[thread_local]
   |   ^^^^^^^^^^^^
   |
   = help: the `thread_local` attribute can be applied to foreign statics and statics

error: the `thread_local` attribute cannot be used on functions
  --> $DIR/non-static.rs:8:3
   |
LL | #[thread_local]
   |   ^^^^^^^^^^^^
   |
   = help: the `thread_local` attribute can be applied to foreign statics and statics

error: the `thread_local` attribute cannot be used on closures
  --> $DIR/non-static.rs:11:7
   |
LL |     #[thread_local] || {};
   |       ^^^^^^^^^^^^
   |
   = help: the `thread_local` attribute can be applied to foreign statics and statics

error: the `thread_local` attribute cannot be used on struct fields
  --> $DIR/non-static.rs:16:7
   |
LL |     #[thread_local]
   |       ^^^^^^^^^^^^
   |
   = help: the `thread_local` attribute can be applied to foreign statics and statics

error: aborting due to 4 previous errors

